# docs/swagger.yaml
@@ -1193,6 +1193,10 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
+        "503":
+          description: Shutting down, no new tasks are taken; retry later
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
       summary: Manually trigger billing data sync
       tags:
       - Data Sync
